Update to project after lecture 18.

--- a/blog/styles/index.scss
+++ b/blog/styles/index.scss
@@ -49,6 +49,8 @@ html, body {
   
     .card-date {
       font-size: 13px;
+      color: #afafaf;
+      font-style: italic;
     }
   
     .card-main-title {
