--- a/blog/styles/index.scss
+++ b/blog/styles/index.scss
@@ -237,6 +237,16 @@ html, body {
   .blog-image {
     margin-bottom: 10px;
     text-align: center;
+
+    &-left {
+      float: left;
+      margin-right: 30px;
+    }
+
+    &-right {
+      float: right;
+      margin-left: 30px;
+    }
   }
   .image-alt {
     margin-top: 3px;
